--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -10,7 +10,7 @@
 
 <style is:global>
     /* https://github.com/r4ai/remark-callout/blob/40d857e9885d335ca0c688d6eb2755e54dd2567b/packages/website/src/pages/playground/_callout.css#L1-L384 */
-    @reference "../styles/global.css";
+    @reference "../global.css";
 
     .prose {
         [data-callout] {
