--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -86,7 +86,7 @@ const themes = Object.keys(themeConfig);
 </script>
 
 <style>
-    @reference "../styles/global.css";
+    @reference "../global.css";
 
     html[data-theme-preference="light"] #theme-icon-light,
     html[data-theme-preference="dark"] #theme-icon-dark,
