--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -134,7 +134,7 @@ const backlinkData = Array.from(currentNode.backlinks)
     tags={seoTags}
 >
     <div class="m-auto max-w-2xl">
-        <div class="flex flex-col gap-2 mb-6">
+        <div class="mb-6 flex flex-col gap-2">
             <div class="flex flex-row items-center gap-1">
                 <KindIcon
                     kind={currentNode.data?.kind}
