--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,10 @@ const postsForHomepage = Array.from(allNodesMap.values())
 ---
 
 <Layout
-    title="Abhi Agarwal"
+    title="Posts"
     description="Software Engineer. I build things and write about them."
     type="website"
+    publishedTime={dayjs()}
 >
     <div class="mx-auto max-w-2xl">
         <h1 class="mb-6 font-serif text-3xl font-semibold text-dark">
