--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -132,6 +132,7 @@ const backlinkData = Array.from(currentNode.backlinks)
     description={seoDescription}
     type={seoType}
     tags={seoTags}
+    publishedTime={dayjs(currentNode.data?.published)}
 >
     <div class="m-auto max-w-2xl">
         <div class="mb-6 flex flex-col gap-2">
