--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -22,6 +22,7 @@ const links: { href: string; text: string }[] = [
                         pathname === link.href && "text-primary",
                     ]}
                     href={link.href}
+                    data-astro-prefetch
                 >
                     {link.text}
                 </a>
