--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <article
-    class="prose max-w-full prose-headings:font-serif prose-headings:font-semibold prose-headings:text-dark prose-p:text-base/normal prose-p:text-dark prose-a:font-[weight:inherit] prose-a:text-primary prose-strong:font-bold prose-strong:text-secondary prose-code:font-mono prose-code:text-dark prose-ol:text-base/snug prose-ol:text-dark prose-ul:text-base/snug prose-ul:text-dark prose-li:text-base/snug prose-li:text-dark prose-img:rounded-xl"
+    class="prose max-w-full prose-headings:font-serif prose-headings:font-semibold prose-headings:text-dark prose-p:text-base/normal prose-p:text-dark prose-a:font-[weight:inherit] prose-a:text-primary prose-strong:font-bold prose-strong:text-secondary prose-code:font-mono prose-code:text-sm prose-code:font-[weight:inherit] prose-code:text-inherit prose-ol:text-base/snug prose-ol:text-dark prose-ul:text-base/snug prose-ul:text-dark prose-li:text-base/snug prose-li:text-dark prose-img:rounded-xl"
 >
     <slot />
 </article>
